SFINAE example. Convariant & Contraconvariant example.

--- a/ACUtils/ACUtils.vcxproj.filters
+++ b/ACUtils/ACUtils.vcxproj.filters
@@ -13,20 +13,32 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\tricks">
+      <UniqueIdentifier>{b89fb5fa-2e3a-4f11-a1cb-6c157eb8735a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="tricks\convar_and_contravar.h">
+      <Filter>源文件\tricks</Filter>
+    </ClInclude>
+    <ClInclude Include="tricks\sfinae.h">
+      <Filter>源文件\tricks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="ACUtils.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="tricks\convar_and_contravar.cpp">
+      <Filter>源文件\tricks</Filter>
     </ClCompile>
-    <ClCompile Include="sfinae.cpp">
+    <ClCompile Include="tricks\sfinae.cpp">
+      <Filter>源文件\tricks</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
