Add leptJson Parser.

--- a/ACUtils/ACUtils.vcxproj
+++ b/ACUtils/ACUtils.vcxproj
@@ -99,7 +99,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -155,6 +155,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="tricks\convar_and_contravar.h" />
     <ClInclude Include="tricks\sfinae.h" />
+    <ClInclude Include="tutorial\leptjson\leptjson.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -166,6 +167,8 @@
     </ClCompile>
     <ClCompile Include="tricks\convar_and_contravar.cpp" />
     <ClCompile Include="tricks\sfinae.cpp" />
+    <ClCompile Include="tutorial\leptjson\leptjson.cpp" />
+    <ClCompile Include="tutorial\leptjson\test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
