--- a/ACUtils/ACUtils.vcxproj
+++ b/ACUtils/ACUtils.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="algorithm\GenericAlgorithm.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="tricks\convar_and_contravar.h" />
     <ClInclude Include="tricks\CppStandard11.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="utils\MixStack.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="algorithm\GenericAlgorithm.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
